2014-11-17  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh (OBSOLETE): Cleanup list, some eclasses
	have been removed.

2014-02-02  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.26 released.

2014-01-25  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* keyword-generation.sh: Exclude functions that are marked as
	internal in eclass documentation.

2014-01-23  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.25 released.

2014-01-22  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* keyword-generation.sh (ECLASSES, ECLASSFILES): Avoid deprecated
	"portageq portdir" call.

2013-10-10  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el
	(ebuild-mode-keywords-eclass-documentation): Add new keywords
	@BUGREPORTS and @VCSURL from eclass-to-manpage.awk.

2013-09-18  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Remove special
	treatment for EAPI=0.

2013-09-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.24 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* gentoo-newsitem-mode.el (gentoo-newsitem-font-lock-keywords):
	Add missing pair of parentheses.

2013-09-08  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.23 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated
	from eclasses.

	* keyword-generation.sh (OBSOLETE): Cleanup list.
	(ECLASSES): Strip filename suffix and sort the list of eclasses.

2013-07-07  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el: Add no-update-autoloads to file
	variables.

	* ebuild-mode.el (ebuild-mode-arch-list): Add amd64-fbsd to
	fallback list.

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Work around
	problem with nested interactors in XEmacs. Suppress IUSE if its
	value is empty; the variable is no longer mandatory.

2013-07-06  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.22 released.
